single clean makefile

--- a/tex/costoffreedom.tex
+++ b/tex/costoffreedom.tex
@@ -42,6 +42,7 @@
 \includepdf[pages={1}]{includes/cost-of-freedom-collective-memory.pdf}
 \chapter{Collective Memory}
 
+\include{chapters/collective-memory}
 \include{chapters/the-uncommon-creativity-of-bassel-khartabil}
 \include{chapters/bassel-and-my-freedom}
 % \include{chapters/about-bassel} % requires arabtex
@@ -56,7 +57,8 @@
 % \include{chapters/free-bassel} % image
 
 \includepdf[pages={1}]{includes/cost-of-freedom-opening:freedom.pdf}
-\chapter{Opening:Freedom}
+\include{chapters/opening:freedom}
+\include{chapters/keeping-promises}
 \include{chapters/keeping-promises}
 \include{chapters/the-shit-of-freedom}
 \include{chapters/freedom-to-vs-freedom-from}
@@ -72,6 +74,8 @@
 
 \includepdf[pages={1}]{includes/cost-of-freedom-architectonics-of-power.pdf}
 \chapter{Architectonics Of Power}
+
+\include{chapters/architectonics-of-power}
 \include{chapters/hacking-the-contradictions}
 \include{chapters/time-to-wake-up}
 \include{chapters/the-cost-of-internet-freedom}
@@ -87,6 +91,7 @@
 
 \includepdf[pages={1}]{includes/cost-of-freedom-affordances.pdf}
 \chapter{Affordances}
+\include{chapters/affordances}
 \include{chapters/queering}
 \include{chapters/nomadic-family}
 \include{chapters/self-sufficiency}
@@ -97,6 +102,7 @@
 
 \includepdf[pages={1}]{includes/cost-of-freedom-epilogue.pdf}
 \chapter{Epilogue}
+\include{chapters/epilogue}
 \include{chapters/internal-freedom}
 \include{chapters/love-letter-to-computers}
 \include{chapters/arabfuturisms-conversation-a}
@@ -105,6 +111,6 @@
 
 \backmatter  % additional stuff
 \includepdf[pages={1}]{includes/cost-of-freedom-appendix.pdf}
-% \include{appendix}
+\include{chapters/appendix}
 
 \end{document}
