--- a/tex/costoffreedom.tex
+++ b/tex/costoffreedom.tex
@@ -4,6 +4,9 @@
 \usepackage{pdfpages}
 
 \setlength{\headheight}{15pt}
+\setcounter{secnumdepth}{0}
+\setcounter{tocdepth}{2}
+
 \begin{document}
 
 \raggedbottom %  makes all pages the height of the text on that page. No extra vertical space is added.
@@ -16,6 +19,7 @@
 
 \frontmatter
 \input{info} % some data about the work and the authors
+
 
 % CC-0 license
 \cclicensepage
@@ -54,9 +58,11 @@
 \include{chapters/bassel-k}
 % \include{chapters/my-friend-is-not-free} % requires chinese
 \include{chapters/liberte}
-% \include{chapters/free-bassel} % image
+\include{chapters/free-bassel} % image
 
 \includepdf[pages={1}]{includes/cost-of-freedom-opening:freedom.pdf}
+\chapter{Opening:Freedom}
+
 \include{chapters/opening:freedom}
 \include{chapters/keeping-promises}
 \include{chapters/keeping-promises}
