--- a/tex/costoffreedom.tex
+++ b/tex/costoffreedom.tex
@@ -44,9 +44,11 @@
 \include{chapters/prologue-introduction}
 
 \includepdf[pages={1}]{includes/cost-of-freedom-collective-memory.pdf}
-\chapter{Collective Memory}
+% \chapter*{Collective Memory}
 
 \include{chapters/collective-memory}
+\addcontentsline{toc}{chapter}{Collective Memory}
+
 \include{chapters/the-uncommon-creativity-of-bassel-khartabil}
 \include{chapters/bassel-and-my-freedom}
 % \include{chapters/about-bassel} % requires arabtex
@@ -61,9 +63,11 @@
 \include{chapters/free-bassel} % image
 
 \includepdf[pages={1}]{includes/cost-of-freedom-opening:freedom.pdf}
-\chapter{Opening:Freedom}
+% \chapter{Opening:Freedom}
 
 \include{chapters/opening:freedom}
+\addcontentsline{toc}{chapter}{Opening:Freedom}
+
 \include{chapters/keeping-promises}
 \include{chapters/keeping-promises}
 \include{chapters/the-shit-of-freedom}
@@ -79,9 +83,11 @@
 \include{chapters/free-as-in-commons}
 
 \includepdf[pages={1}]{includes/cost-of-freedom-architectonics-of-power.pdf}
-\chapter{Architectonics Of Power}
+% \chapter{Architectonics Of Power}
 
 \include{chapters/architectonics-of-power}
+\addcontentsline{toc}{chapter}{Architectonics Of Power}
+
 \include{chapters/hacking-the-contradictions}
 \include{chapters/time-to-wake-up}
 \include{chapters/the-cost-of-internet-freedom}
@@ -96,8 +102,11 @@
 \include{chapters/beyond-capitalism}
 
 \includepdf[pages={1}]{includes/cost-of-freedom-affordances.pdf}
-\chapter{Affordances}
+% \chapter{Affordances}
+
 \include{chapters/affordances}
+\addcontentsline{toc}{chapter}{Affordances}
+
 \include{chapters/queering}
 \include{chapters/nomadic-family}
 \include{chapters/self-sufficiency}
@@ -107,8 +116,11 @@
 \include{chapters/reconciliation}
 
 \includepdf[pages={1}]{includes/cost-of-freedom-epilogue.pdf}
-\chapter{Epilogue}
+% \chapter{Epilogue}
+
 \include{chapters/epilogue}
+\addcontentsline{toc}{chapter}{Epilogue}
+
 \include{chapters/internal-freedom}
 \include{chapters/love-letter-to-computers}
 \include{chapters/arabfuturisms-conversation-a}
@@ -117,6 +129,7 @@
 
 \backmatter  % additional stuff
 \includepdf[pages={1}]{includes/cost-of-freedom-appendix.pdf}
+\addcontentsline{toc}{chapter}{Appendix}
 \include{chapters/appendix}
 
 \end{document}
