--- a/latex/tex/costoffreedom.tex
+++ b/latex/tex/costoffreedom.tex
@@ -4,6 +4,7 @@
 \usepackage{pdfpages}
 
 \setlength{\headheight}{15pt}
+\selectlanguage{english}
 
 
 
@@ -28,26 +29,23 @@
 \include{chapters/attributions}
 
 \tableofcontents
-\addcontentsline{toc}{section}{Table of Content}
 
-% \blankpage
-% \include{chapters/announcement}
+\include{chapters/announcement}
 
 \mainmatter % the main course
-\selectlanguage{english}
 
 \includepdf[pages={1}]{includes/cost-of-freedom-prologue.pdf}
-\addcontentsline{toc}{chapter}{\protect\numberline{}Prologue}
+\addcontentsline{toc}{chapter}{Prologue}
 
 \blankpage
 \include{chapters/prologue-voices-of-free-culture}
 \include{chapters/prologue-introduction}
 
 \includepdf[pages={1}]{includes/cost-of-freedom-collective-memory.pdf}
+\addcontentsline{toc}{chapter}{Collective Memory}
 % \chapter*{Collective Memory}
 
 \include{chapters/collective-memory}
-\addcontentsline{toc}{chapter}{Collective Memory}
 
 \include{chapters/the-uncommon-creativity-of-bassel-khartabil}
 \include{chapters/bassel-and-my-freedom}
