--- a/latex/tex/costoffreedom.tex
+++ b/latex/tex/costoffreedom.tex
@@ -127,7 +127,12 @@
 
 \backmatter  % additional stuff
 \includepdf[pages={1}]{includes/cost-of-freedom-appendix.pdf}
+
 \addcontentsline{toc}{chapter}{Appendix}
-\include{chapters/appendix}
+% \include{chapters/appendix}
+
+\include{chapters/call-for-participations}
+\include{chapters/license}
+
 
 \end{document}
