--- a/latex/tex/costoffreedom.tex
+++ b/latex/tex/costoffreedom.tex
@@ -58,7 +58,8 @@
 \include{chapters/bassel-k}
 % \include{chapters/my-friend-is-not-free} % requires chinese
 \include{chapters/liberte}
-\include{chapters/free-bassel} % image
+% \include{chapters/free-bassel} % image
+\include{includes/free-bassel} % image
 
 \includepdf[pages={1}]{includes/cost-of-freedom-opening:freedom.pdf}
 % \chapter{Opening:Freedom}
