add Chinese characters support

--- a/latex/tex/costoffreedom.tex
+++ b/latex/tex/costoffreedom.tex
@@ -56,9 +56,8 @@
 \include{chapters/supporting-bassel}
 \include{chapters/what-does-freedom-mean-to-you-mr-government}
 \include{chapters/bassel-k}
-% \include{chapters/my-friend-is-not-free} % requires chinese
+\include{includes/my-friend-is-not-free} % requires chinese
 \include{chapters/liberte}
-% \include{chapters/free-bassel} % image
 \include{includes/free-bassel} % image
 
 \includepdf[pages={1}]{includes/cost-of-freedom-opening:freedom.pdf}
