--- a/latex/tex/costoffreedom.tex
+++ b/latex/tex/costoffreedom.tex
@@ -1,7 +1,6 @@
 % UTF-8 encoding
 
 \documentclass{CostOfFreedomBook}
-\usepackage{pdfpages}
 
 \setlength{\headheight}{15pt}
 \selectlanguage{english}
@@ -49,7 +48,7 @@
 
 \include{chapters/the-uncommon-creativity-of-bassel-khartabil}
 \include{chapters/bassel-and-my-freedom}
-% \include{chapters/about-bassel} % requires arabtex
+\include{includes/about-bassel} % requires arabtex
 \include{chapters/newpalmyra-and-the-free-bassel-campaign}
 \include{chapters/palmyra-3d-premonition-vision-of-bassel}
 \include{chapters/rebuild-asad-al-lat}
