cleaner chaptering (remove inter-chapters)

--- a/latex/tex/costoffreedom.tex
+++ b/latex/tex/costoffreedom.tex
@@ -40,11 +40,10 @@
 \include{chapters/prologue-voices-of-free-culture}
 \include{chapters/prologue-introduction}
 
-\includepdf[pages={1}]{includes/cost-of-freedom-collective-memory.pdf}
 \addcontentsline{toc}{chapter}{Collective Memory}
+\includepdf[pages={1}]{includes/cost-of-freedom-collective-memory.pdf}
+% \include{chapters/collective-memory}
 % \chapter*{Collective Memory}
-
-\include{chapters/collective-memory}
 
 \include{chapters/the-uncommon-creativity-of-bassel-khartabil}
 \include{chapters/bassel-and-my-freedom}
@@ -59,11 +58,10 @@
 \include{chapters/liberte}
 \include{includes/free-bassel} % image
 
+\addcontentsline{toc}{chapter}{Opening:Freedom}
 \includepdf[pages={1}]{includes/cost-of-freedom-opening:freedom.pdf}
 % \chapter{Opening:Freedom}
-
-\include{chapters/opening:freedom}
-\addcontentsline{toc}{chapter}{Opening:Freedom}
+% \include{chapters/opening:freedom}
 
 \include{chapters/keeping-promises}
 \include{chapters/keeping-promises}
@@ -79,11 +77,11 @@
 \include{chapters/freedom-as-a-commodity}
 \include{chapters/free-as-in-commons}
 
+\addcontentsline{toc}{chapter}{Architectonics Of Power}
 \includepdf[pages={1}]{includes/cost-of-freedom-architectonics-of-power.pdf}
 % \chapter{Architectonics Of Power}
 
-\include{chapters/architectonics-of-power}
-\addcontentsline{toc}{chapter}{Architectonics Of Power}
+% \include{chapters/architectonics-of-power}
 
 \include{chapters/hacking-the-contradictions}
 \include{chapters/time-to-wake-up}
@@ -98,11 +96,10 @@
 \include{chapters/free-software-economics}
 \include{chapters/beyond-capitalism}
 
+\addcontentsline{toc}{chapter}{Affordances}
 \includepdf[pages={1}]{includes/cost-of-freedom-affordances.pdf}
 % \chapter{Affordances}
-
-\include{chapters/affordances}
-\addcontentsline{toc}{chapter}{Affordances}
+% \include{chapters/affordances}
 
 \include{chapters/queering}
 \include{chapters/nomadic-family}
@@ -112,11 +109,11 @@
 \include{chapters/resilient-networks}
 \include{chapters/reconciliation}
 
+\addcontentsline{toc}{chapter}{Epilogue}
 \includepdf[pages={1}]{includes/cost-of-freedom-epilogue.pdf}
 % \chapter{Epilogue}
 
-\include{chapters/epilogue}
-\addcontentsline{toc}{chapter}{Epilogue}
+% \include{chapters/epilogue}
 
 \include{chapters/internal-freedom}
 \include{chapters/love-letter-to-computers}
@@ -125,9 +122,9 @@
 \include{chapters/andromeda-report-gliese-832-c-expedition}
 
 \backmatter  % additional stuff
+\addcontentsline{toc}{chapter}{Appendix}
 \includepdf[pages={1}]{includes/cost-of-freedom-appendix.pdf}
 
-\addcontentsline{toc}{chapter}{Appendix}
 % \include{chapters/appendix}
 
 \include{chapters/call-for-participations}
