--- a/latex/tex/costoffreedom.tex
+++ b/latex/tex/costoffreedom.tex
@@ -56,7 +56,7 @@
 \include{chapters/bassel-k}
 \include{includes/my-friend-is-not-free} % requires chinese
 \include{chapters/liberte}
-\include{includes/free-bassel} % image
+\include{chapters/free-bassel} % image
 
 \addcontentsline{toc}{chapter}{Opening:Freedom}
 \includepdf[pages={1}]{includes/cost-of-freedom-opening:freedom.pdf}
