--- a/latex/tex/includes/my-friend-is-not-free.tex
+++ b/latex/tex/includes/my-friend-is-not-free.tex
@@ -18,13 +18,13 @@ still there as the emotion is here is there is everywhere.
 Getting to freedom is not cost free. My friend it is not free. MY FRIEND
 IS NOT FREE.
 
-\zht{很多時候這是情緒。憤怒、挫折、極度疲憊、孤單、困惑、想要逃避這一切。你
+很多時候這是情緒。憤怒、挫折、極度疲憊、孤單、困惑、想要逃避這一切。你
 期盼著希望。但全然無望。沒有止境。過不去。同樣的事情，你講了又講。再度
 面壁。你跟許多人講過：新見面的人、不同的人、同樣的人。他們不懂！你在焦
-慮中打轉。停不下來。}
+慮中打轉。停不下來。
 
-\zht{你曾到過那裡。你一直在那裡。你現站在這裡，但你還處於那裡，在這裡在那裡
-在在是情緒。}
+你曾到過那裡。你一直在那裡。你現站在這裡，但你還處於那裡，在這裡在那裡
+在在是情緒。
 
-\zht{要得自由並非不需代價。我的朋友自由並非不需代價。我的朋友不得自由，付出
-了代價。}
+要得自由並非不需代價。我的朋友自由並非不需代價。我的朋友不得自由，付出
+了代價。
