fix wrong image page

--- a/latex/tex/costoffreedom.tex
+++ b/latex/tex/costoffreedom.tex
@@ -14,8 +14,6 @@
 \pagestyle{plain}
 \pagenumbering{roman}
 
-
-
 \includepdf[page=1]{includes/cost-of-freedom-cover.pdf}
 
 \input{info} % some data about the work and the authors
@@ -58,9 +56,9 @@
 \include{chapters/supporting-bassel}
 \include{chapters/what-does-freedom-mean-to-you-mr-government}
 \include{chapters/bassel-k}
-\include{includes/my-friend-is-not-free} % requires chinese
+\include{chapters/my-friend-is-not-free} % requires chinese
 \include{chapters/liberte}
-\include{chapters/free-bassel} % image
+\include{includes/free-bassel} % image
 
 \addcontentsline{toc}{chapter}{Opening:Freedom}
 \includepdf[pages={1}]{includes/cost-of-freedom-opening:freedom.pdf}
