force right-side page for new chapter

--- a/latex/tex/costoffreedom.tex
+++ b/latex/tex/costoffreedom.tex
@@ -28,6 +28,7 @@
 
 \tableofcontents
 
+\cleardoublepage
 \includepdf[pages={1}]{includes/cost-of-freedom-attributions.pdf}
 \include{chapters/attributions}
 
@@ -35,6 +36,7 @@
 
 \mainmatter % the main course
 
+\cleardoublepage
 \includepdf[pages={1}]{includes/cost-of-freedom-prologue.pdf}
 \addcontentsline{toc}{chapter}{Prologue}
 
@@ -42,6 +44,7 @@
 \include{chapters/prologue-voices-of-free-culture}
 \include{chapters/prologue-introduction}
 
+\cleardoublepage
 \addcontentsline{toc}{chapter}{Collective Memory}
 \includepdf[pages={1}]{includes/cost-of-freedom-collective-memory.pdf}
 % \include{chapters/collective-memory}
@@ -60,6 +63,7 @@
 \include{chapters/liberte}
 \include{includes/free-bassel} % image
 
+\cleardoublepage
 \addcontentsline{toc}{chapter}{Opening:Freedom}
 \includepdf[pages={1}]{includes/cost-of-freedom-opening:freedom.pdf}
 % \chapter{Opening:Freedom}
@@ -97,6 +101,7 @@
 \include{chapters/free-software-economics}
 \include{chapters/beyond-capitalism}
 
+\cleardoublepage
 \addcontentsline{toc}{chapter}{Affordances}
 \includepdf[pages={1}]{includes/cost-of-freedom-affordances.pdf}
 % \chapter{Affordances}
@@ -110,6 +115,7 @@
 \include{chapters/resilient-networks}
 \include{chapters/reconciliation}
 
+\cleardoublepage
 \addcontentsline{toc}{chapter}{Epilogue}
 \includepdf[pages={1}]{includes/cost-of-freedom-epilogue.pdf}
 % \chapter{Epilogue}
@@ -123,6 +129,7 @@
 \include{chapters/andromeda-report-gliese-832-c-expedition}
 
 \backmatter  % additional stuff
+\cleardoublepage
 \addcontentsline{toc}{chapter}{Appendix}
 \includepdf[pages={1}]{includes/cost-of-freedom-appendix.pdf}
 
