remove cover from latex file for printing

--- a/latex/tex/costoffreedom.tex
+++ b/latex/tex/costoffreedom.tex
@@ -14,14 +14,13 @@
 \pagestyle{plain}
 \pagenumbering{roman}
 
-\includepdf[page=1]{includes/cost-of-freedom-cover.pdf}
-
+% \includepdf[page=1]{includes/cost-of-freedom-cover.pdf}
 \input{info} % some data about the work and the authors
 
-\blankpage
 
 % cover
 \frontmatter
+% \cleardoublepage
 % CC-0 license
 \cclicensepage
 \blankpage
