--- a/latex/tex/costoffreedom.tex
+++ b/latex/tex/costoffreedom.tex
@@ -14,7 +14,9 @@
 \pagestyle{plain}
 \pagenumbering{roman}
 
-% \includepdf[page=1]{includes/cost-of-freedom-cover.pdf}
+\includepdf[page=1]{includes/cost-of-freedom-cover-6x9.pdf}
+
+
 \input{info} % some data about the work and the authors
 
 
