fix font being too large

--- a/latex/tex/includes/announcement.tex
+++ b/latex/tex/includes/announcement.tex
@@ -6,6 +6,6 @@ you, the reader, the following link: http://freebassel.org We would be
 very happy if you were to honor our efforts by visiting that link and
 adding your name to the campaign to Free Bassel.
 
-\large{\#costoffreedom}\label{costoffreedom}
+\#costoffreedom\label{costoffreedom}
 
-\large{\#freebassel}\label{freebassel}
+\#freebassel\label{freebassel}
